Agregado customAdapter, modificado algunas cosas del backend para mostrar flores, no deberia usarse ese metodo pero asi lo dejo por ahora. falta conectar la vista de "ver detalle" de cada planta. salu2.

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -19,15 +19,14 @@
         android:layout_marginRight="20dp"
         android:background="@drawable/input"
         android:queryHint="Search Here"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
+        android:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
     <ListView
         android:id="@+id/myList"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        />
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"></ListView>
 
 </LinearLayout>
