--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -17,19 +17,19 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="103dp"
+            android:layout_height="131dp"
             android:src="@drawable/comprobar" />
         <Space
             android:layout_width="match_parent"
-            android:layout_height="20dp" />
+            android:layout_height="10dp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="¡Hola!"
+            android:text="¡Bienvenido!"
             android:textAlignment="center"
             android:textColor="#fff"
-            android:textSize="48dp"/>
+            android:textSize="60dp"/>
         <TextView
             android:id="@+id/textViewName"
             android:layout_width="match_parent"
@@ -37,7 +37,7 @@
             android:text="Usuario"
             android:textAlignment="center"
             android:textColor="#fff"
-            android:textSize="28dp"/>
+            android:textSize="38dp"/>
 
         <TextView
             android:id="@+id/textViewEmail"
@@ -47,6 +47,8 @@
             android:textAlignment="center"
             android:textColor="#fff"
             android:textSize="20dp"/>
+
+
 
     </LinearLayout>
 
